src/objects/User.object
<CustomObject>
    <fields>
        <fullName>ExternalUsername__c</fullName>
        <externalId>true</externalId>
        <label>ExternalAlias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultProductLookupTab__c</fullName>
        <description>Default tab for this user in Product Lookup page.</description>
        <inlineHelpText>Customize default tab in Product Lookup page.</inlineHelpText>
        <label>Default Product Lookup Tab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guided Selling</fullName>
                    <default>true</default>
                    <label>Guided Selling</label>
                </value>
                <value>
                    <fullName>Search Filters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__OutputFormatChangeAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this user is allowed to change output format of quote documents.</description>
        <inlineHelpText>Check to allow this user to change output format of quote documents.</inlineHelpText>
        <label>Allow Output Format Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductSortPreference__c</fullName>
        <description>Product sort preference for this user. Currently only Chatter Follows are supported.</description>
        <inlineHelpText>Select &quot;Followed&quot; to display products you follow in Chatter before others when adding to quote.</inlineHelpText>
        <label>Product Sort Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Followed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ResetProductLookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether Product Lookup data (guided selling questions, search filters and search results) are cleared after user selects desired products.</description>
        <inlineHelpText>Check to clear search filters and results every time you add products to your quotes. Otherwise, your previous selections are kept.</inlineHelpText>
        <label>Reset Product Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Theme__c</fullName>
        <description>Field that will be set by Select Theme custom link, once one is selected.</description>
        <label>Theme</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Portal_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SpringCM Portal Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__SpringCM_EnabledEndDate__c</fullName>
        <inlineHelpText>This is the date that the user becomes disabled in SpringCM.  Leave blank for never.  Put in today&apos;s date for immediately.</inlineHelpText>
        <label>SpringCM Enabled End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__SpringCM_EnabledStartDate__c</fullName>
        <inlineHelpText>This is that date that the user becomes enabled in SpringCM. Leave blank if enabled immediately.</inlineHelpText>
        <label>SpringCM Enabled Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__SpringCM_Persona__c</fullName>
        <description>Personas, or role-based user settings, displays different buttons and menu items depending upon the user&apos;s job function</description>
        <inlineHelpText>Type in the name of the Persona the user is to be assinged to.</inlineHelpText>
        <label>SpringCM Persona</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__SpringCM_Role__c</fullName>
        <inlineHelpText>-Guest (View Only Access)
-Limited Subscriber (Select access to features)
-Full Subscriber (Complete access to features)
-User Administrator (Complete access to features and some administrative power)
-Super Administrator (Full administrative power)</inlineHelpText>
        <label>SpringCM Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Subscriber</fullName>
                    <default>true</default>
                    <label>Full Subscriber</label>
                </value>
                <value>
                    <fullName>Super Administrator</fullName>
                </value>
                <value>
                    <fullName>User Administrator</fullName>
                </value>
                <value>
                    <fullName>Limited Subscriber</fullName>
                </value>
                <value>
                    <fullName>Guest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SpringCMEos__SpringCM_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By clicking this the user will be added to SpringCM.  Also unclicking this will delete the user from SpringCM.</description>
        <label>SpringCM User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__APILicenseKey__c</fullName>
        <label>API License Key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SupportDataAccessKey__c</fullName>
        <label>Support Data Access Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFMembershipStatus__c</fullName>
        <label>DSProSFMembershipStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFPassword__c</fullName>
        <label>DSProSFPassword</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFUsername__c</fullName>
        <description>DocuSign username</description>
        <label>DSProSFUsername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Commercial_Finance</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>FinancialForce Accountant</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.DEPARTMENT</field>
            <operation>equals</operation>
            <value>Commercial Finance</value>
        </filters>
        <label>Commercial Finance</label>
    </listViews>
    <listViews>
        <fullName>SpringCMEos__SpringCM_Users</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SpringCMEos__SpringCM_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>SpringCM Users</label>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>DocuSign Active Users</label>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignInactiveUsers</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DocuSign Inactive Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>